--- a/day3/p3.html
+++ b/day3/p3.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Devment Bhushan</title>
+    <title>title of page</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    hey this my first website.harry bhai ka course accha he
-<script src="script.js"></script>
+    content
+    <script src="script.js"></script>
+    
 </body>
 </html>
