--- a/day3/bookmarks.html
+++ b/day3/bookmarks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookmark Manager</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>primary Bookmark</h2>
     <p> 
 
-        <a target="_blank" href="https:www.google.com">OpenGoogle</a>
+        <a href="https:www.google.com">Open google</a>
     </p>
     <p>
 
